--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
   "devDependencies": {
     "@webpack-cli/init": "^1.0.3",
     "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.0",
-    "node-sass": "^5.0.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "sass": "^1.27.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
